# music

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app_state.cpp  app_state.h  audio_player.cpp  audio_player.h  cover_image_provider.cpp  cover_image_provider.h  main.cpp  metadata_loader.cpp  metadata_loader.h  playlist_model.cpp  playlist_model.h  resources.qrc  song.h
qml/: AppWindow.qml  ControlButton.qml  CoverImage.qml  Song.qml  ThemeManager.qml  VolumeButton.qml
